tests/baselines/reference/CommentsOnObjectLiteral1.errors.txt
==== tests/cases/compiler/commentsOnObjectLiteral1.ts (1 errors) ====
    var Person = makeClass( 
                 ~~~~~~~~~
!!! error TS2095: Could not find symbol 'makeClass'.
       /** 
         @scope Person 
       */ 
       {
       } 
    );